--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
-    "express": "^4.21.1"
+    "@types/sqlite3": "^3.1.11",
+    "express": "^4.21.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
