--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,16 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-  "@types/express": "^4.17.17",
-  "@types/sqlite3": "^3.1.11",
-  "cors": "^2.8.5",
-  "express": "^4.21.1",
-  "sqlite3": "^5.1.7"
-},
-"devDependencies": {
-  "@types/cors": "^2.8.17",
-  "nodemon": "^3.1.7",
-  "ts-node": "^10.9.2",
-  "typescript": "^5.6.3"
-}
+    "@types/express": "^4.17.17",
+    "@types/sqlite3": "^3.1.11",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express-rate-limit": "^5.1.3",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  }
 }
