--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc && npm run copy-db",
+    "copy-db": "copyfiles -u 2 src/database/dictionary.db dist/database/"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
