--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/server"
   ],
   "scripts": {
-    "start": "npm-run-all --parallel start:client start:server",
+    "start": "npm-run-all --parallel start:server start:client",
     "start:client": "npm run start --workspace=client",
     "start:server": "npm run start --workspace=server",
     "build": "npm-run-all build:client build:server",
